style: hero(add gap 17 in btn)/load icons.svg in public fix: connected btn learn-more to artist-modal/ delete test-btn

--- a/src/css/artists.css
+++ b/src/css/artists.css
@@ -117,6 +117,23 @@
     margin: 64px 0;
   }
 }
+
+.artists-learn-more-card-btn {
+  display: flex;
+  border: none;
+  align-items: center;
+  justify-content: center;
+  padding: 1.5px 0;
+  transition: all 0.3s ease-in-out;
+  color: #fff;
+  fill: #fff;
+  gap: 8px;
+}
+
+.artists-learn-more-card-btn:hover {
+  color: #764191;
+  fill: #764191;
+}
 /* #endregion mobile devices*/
 
 /* #region Tablet devices */
@@ -253,6 +270,7 @@
     line-height: 1.2;
     letter-spacing: -0.01em;
     color: #ffffff;
+    margin-bottom: 80px;
   }
 
   .artists-card-item {
